feat: restore and extend keys

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ STELLAR_RPC_URL=https://soroban-testnet.stellar.org
 # Account Configuration
 STELLAR_SECRET_KEY=your_secret_key_here
 
-# Base fee for transactions
-BASE_FEE=10000
+
+BASE_FEE=10000 # Base fee for transactions
+TTL_THRESHOLD=100 # If the entry's liveUntilLedgerSeq is less than this value, it needs a bump
+EXTEND_TTL_BY=1000  # The number of ledgers to extend TTL by
