--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "dev": "deno run --allow-env --allow-net --allow-read --env src/main.ts",
-    "start": "deno run --allow-net --allow-ffi --allow-env --env main.ts"
+    "check": "deno run --allow-env --allow-net --allow-read --allow-write --env src/main.ts",
+    "run": "deno run --allow-env --allow-net --allow-read --allow-write --env src/main.ts --true"
   },
   "compilerOptions": {
     "lib": ["deno.ns", "deno.window", "deno.worker"],
