--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
   "tasks": {
-    "check": "deno run --allow-env --allow-net --allow-read --allow-write --env src/main.ts",
-    "run": "deno run --allow-env --allow-net --allow-read --allow-write --env src/main.ts --true"
+    "check": "deno run --allow-env --allow-net --allow-read --allow-write --allow-ffi --env src/main.ts",
+    "run": "deno run --allow-env --allow-net --allow-read --allow-write --allow-ffi --env src/main.ts --true"
   },
   "compilerOptions": {
     "lib": ["deno.ns", "deno.window", "deno.worker"],
@@ -11,7 +11,6 @@
   "imports": {
     "@stellar/stellar-sdk": "npm:@stellar/stellar-sdk@^14.0.0-rc.3",
     "stellar-sdk": "npm:@stellar/stellar-sdk@^14.0.0-rc.3",
-    "buffer": "npm:buffer@^6.0.3",
-    "sac": "./bindings/src/index.ts"
+    "buffer": "npm:buffer@^6.0.3"
   }
 }
