chore: update env example to 120 days

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@ STELLAR_SECRET_KEY=your_secret_key_here
 
 
 BASE_FEE=10000 # Base fee for transactions
-TTL_THRESHOLD=600000 # how many ledgers from now the entry's liveUntilLedgerSeq should be to not need a bump
-EXTEND_TTL_BY=600000  # The number of ledgers to extend TTL by
+TTL_THRESHOLD=2073600 # how many ledgers from now the entry's liveUntilLedgerSeq should be to not need a bump
+EXTEND_TTL_BY=2073600  # The number of ledgers to extend TTL by
